      up table fetching when using $cfg['ShowTooltips']. Allow to only
      see the grouped/nested tables in properties panel when clicking on
      a table group on the left frame.
    * db_details_structure.php: If JS is enabled, take away <label> link
      functionality because of onmousedown-handler duplicating this
      effect.

2004-05-05 Michal Cihar  <michal@cihar.com>
    * config.inc.php, tbl_change.php, tbl_replace.php,
      libraries/common.lib.php, libraries/config_import.lib.php: Support for
      insert multiple rows at once (RFE #749733).
    * scripts/extchg.sh, scripts/inno2pma.sh: Removed unneeded scripts.

2004-05-04 Michal Cihar  <michal@cihar.com>
    * libraries/sqlparser.data.php: Add ENGINE to reserved words (used instead
      of TYPE in MySQL 4.1.1).
    * libraries/export/sql.php: Fix handling of multi column foreign keys (bug
      #946861).

2004-05-04 Garvin Hicking <pma@supergarv.de>
    * db_details_structure.php: RFE #947467 - Made coloured Mousecursor
      available in tables overview, clicking on a cell in the table
      selects the checkbox next to it.
    * Documentation.html, config.inc.php, left.php: Use NaturalOrder
      for Non-Light left frame. Introduce new option 'nested' for
      $cfg['ShowTooltipAliasTB']. With this set Aliases are used for
      virtual nested grouping, but for the tablename itself the tablename
      will be show, not the Alias.

2004-05-03 Alexander M. Turek  <me@derrabus.de>
    * lang/german-*.inc.php: Clarification.

2004-05-03 Michal Cihar  <michal@cihar.com>
    * querywindow.php: Fix javascript error (bug #946823).
    * tbl_query_box.php: Stray <li> (bug #946530).
    * querywindow.php, tbl_query_box.php: A bit more XHTML validity.
    * css/phpmyadmin.css.php, libraries/common.lib.php: Make tabs CSS styled
      (RFE #946540).
    * db_details.php, tbl_change.php, tbl_query_box.php,
      css/phpmyadmin.css.php: Get rid of wrap="virtual" to achieve more XHTML
      validity.